--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0504.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0504.html
@@ -410,7 +410,7 @@
         </span>
         <span id="w_76" class="ocr_word" title="bbox 951 543 1085 597" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1122 545 1194 598" lang="grc">
@@ -470,9 +470,14 @@
             <ins class="alt" title="nlp 1.00">ὑπάλληλα</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 881 615 1205 667" lang="grc">
+        <span id="w_88_0" class="ocr_word" title="bbox 881 615 1205 667">
           <span class="alternatives">
-            <ins title="nlp 2.00">γένη χαλοῦσιν,</ins>
+            <ins class="alt" title="nlp 2.00">γένη</ins>
+          </span>
+        </span>
+        <span id="w_88_1" class="ocr_word" title="bbox 881 615 1205 667">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καλοπυσιν,</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1244 629 1298 654" lang="grc">
@@ -688,16 +693,11 @@
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1929 836 2121 862" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καταπαύ-</ins>
+            <ins title="nlp 2.00">καταπαύσωμεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 433 888 2120 945">
-        <span id="w_131" class="ocr_word" title="bbox 433 907 561 934" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σωμεν</ins>
-          </span>
-        </span>
         <span id="w_132" class="ocr_word" title="bbox 585 907 653 945" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -976,9 +976,14 @@
             <ins title="nlp 2.00">τέλειοι</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 2100 1171 2183 1209">
+        <span id="w_186_0" class="ocr_word" title="bbox 2100 1171 2183 1209">
           <span class="alternatives">
-            <ins title="nlp 2.00">γενόμένοι</ins>
+            <ins class="alt" title="nlp 2.00">γενόμενοι</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 2100 1171 2183 1209">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">189r</ins>
           </span>
         </span>
       </span>
@@ -1035,16 +1040,11 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 2010 1251 2117 1277" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυνα-</ins>
+            <ins title="nlp 2.00">δυνατῶν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 429 1304 2117 1363">
-        <span id="w_199" class="ocr_word" title="bbox 429 1324 506 1353" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶς</ins>
-          </span>
-        </span>
         <span id="w_200" class="ocr_word" title="bbox 543 1322 703 1363" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴχομεν</ins>
@@ -1144,16 +1144,11 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 2011 1378 2118 1417" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυνά-</ins>
+            <ins title="nlp 2.00">δυνάμεσιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 430 1443 2117 1500">
-        <span id="w_220" class="ocr_word" title="bbox 430 1462 536 1500" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεσιν</ins>
-          </span>
-        </span>
         <span id="w_221" class="ocr_word" title="bbox 568 1461 600 1486" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
@@ -1494,9 +1489,14 @@
             <ins class="alt" title="nlp 1.00">λέγων</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 1699 1790 1820 1829" lang="grc">
+        <span id="w_288_0" class="ocr_word" title="bbox 1699 1790 1820 1829">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ πόθεν</ins>
+            <ins class="alt" title="nlp 2.00">῾πόθεν</ins>
+          </span>
+        </span>
+        <span id="w_288_1" class="ocr_word" title="bbox 1699 1790 1820 1829">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1853 1791 1970 1843" lang="grc">
@@ -1507,11 +1507,6 @@
         <span id="w_290" class="ocr_word" title="bbox 2004 1805 2061 1830" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
-          </span>
-        </span>
-        <span id="w_291" class="ocr_word" title="bbox 2091 1806 2116 1843" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
       </span>
@@ -2188,12 +2183,7 @@
         </span>
         <span id="w_421_0" class="ocr_word" title="bbox 2072 2591 2180 2627">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2089</ins>
-          </span>
-        </span>
-        <span id="w_421_1" class="ocr_word" title="bbox 2072 2591 2180 2627">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">2089:</ins>
           </span>
         </span>
       </span>
@@ -2252,8 +2242,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1614 2653 1733 2686">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUoc.</ins>
-            <del title="nlp 0.90">coUoc.</del>
+            <ins title="nlp 2.00">colloc.</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1760 2653 1791 2685" lang="grc">
@@ -2328,8 +2317,7 @@
         </span>
         <span id="w_446" class="ocr_word" title="bbox 1630 2711 1721 2745">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’T’</ins>
-            <del title="nlp 0.90">’T’</del>
+            <ins title="nlp 2.00">V1T1</ins>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 1894 2709 1933 2744">
@@ -2337,9 +2325,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_448" class="ocr_word" title="bbox 1959 2710 2134 2757" lang="grc">
+        <span id="w_448_0" class="ocr_word" title="bbox 1959 2710 2134 2757">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐχαρίσατοαὐξητιχήν</ins>
+            <ins class="alt" title="nlp 2.00">ἐχαρίσατο</ins>
+          </span>
+        </span>
+        <span id="w_448_1" class="ocr_word" title="bbox 1959 2710 2134 2757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
       </span>
@@ -2474,9 +2467,9 @@
             <ins class="alt" title="nlp 1.00">ἡδέσιν</ins>
           </span>
         </span>
-        <span id="w_475" class="ocr_word" title="bbox 2115 2828 2182 2869" lang="grc">
+        <span id="w_475_0" class="ocr_word" title="bbox 2115 2828 2182 2869">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐπὶ</ins>
+            <ins class="alt" title="nlp 2.00">(ἐπὶ</ins>
           </span>
         </span>
       </span>
@@ -2640,12 +2633,7 @@
         </span>
         <span id="w_505_0" class="ocr_word" title="bbox 1318 3007 1362 3040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Τ</ins>
-          </span>
-        </span>
-        <span id="w_505_1" class="ocr_word" title="bbox 1318 3007 1362 3040">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Τ:</ins>
           </span>
         </span>
         <span id="w_506" class="ocr_word" title="bbox 1395 3019 1458 3040" lang="grc">
@@ -2669,9 +2657,14 @@
             <ins class="alt" title="nlp 1.00">28</ins>
           </span>
         </span>
-        <span id="w_510" class="ocr_word" title="bbox 1968 3015 2128 3038" lang="grc">
+        <span id="w_510_0" class="ocr_word" title="bbox 1968 3015 2128 3038">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοσοῦτονδημιουργημάτων</ins>
+            <ins class="alt" title="nlp 2.00">τοσοῦτονδημιουργημότων</ins>
+          </span>
+        </span>
+        <span id="w_510_1" class="ocr_word" title="bbox 1968 3015 2128 3038">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
       </span>
@@ -2700,12 +2693,7 @@
         </span>
         <span id="w_516_0" class="ocr_word" title="bbox 1329 3066 1374 3098">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Κ</ins>
-          </span>
-        </span>
-        <span id="w_516_1" class="ocr_word" title="bbox 1329 3066 1374 3098">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Κ:</ins>
           </span>
         </span>
         <span id="w_517" class="ocr_word" title="bbox 1403 3065 1734 3110" lang="grc">
@@ -2724,9 +2712,9 @@
             <ins class="alt" title="nlp 1.00">31</ins>
           </span>
         </span>
-        <span id="w_520" class="ocr_word" title="bbox 2025 3073 2180 3108" lang="grc">
+        <span id="w_520_0" class="ocr_word" title="bbox 2025 3073 2180 3108">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμπεριλαμβάνεται</ins>
+            <ins class="alt" title="nlp 2.00">συμπεριλαμβάνεται</ins>
           </span>
         </span>
       </span>
@@ -2779,9 +2767,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_531" class="ocr_word" title="bbox 1455 3136 1571 3157" lang="grc">
+        <span id="w_531_0" class="ocr_word" title="bbox 1455 3136 1571 3157">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_531_1" class="ocr_word" title="bbox 1455 3136 1571 3157">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_532" class="ocr_word" title="bbox 1592 3127 1622 3157">
@@ -2798,11 +2791,6 @@
         <span id="w_534" class="ocr_word" title="bbox 1841 3122 1886 3156">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">34</ins>
-          </span>
-        </span>
-        <span id="w_535" class="ocr_word" title="bbox 1911 3134 2132 3167" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοχίνητοναἰσθητιχὴ</ins>
           </span>
         </span>
       </span>
