--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0551.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0551.html
@@ -387,9 +387,14 @@
             <ins class="alt" title="nlp 1.00">πλειόνων</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1147 548 1458 602" lang="grc">
+        <span id="w_74_0" class="ocr_word" title="bbox 1147 548 1458 602">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγοπεῑσθαι</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖσθαι,</ins>
+          </span>
+        </span>
+        <span id="w_74_1" class="ocr_word" title="bbox 1147 548 1458 602">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1493 549 1591 588" lang="grc">
@@ -400,11 +405,6 @@
         <span id="w_76" class="ocr_word" title="bbox 1622 564 1663 588" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_77" class="ocr_word" title="bbox 1686 549 1855 588" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθόλου</ins>
           </span>
         </span>
       </span>
@@ -630,9 +630,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1346 827 1437 866" lang="grc">
+        <span id="w_122_0" class="ocr_word" title="bbox 1346 827 1437 866">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴὸει</ins>
+            <ins class="alt" title="nlp 2.00">εἴδει</ins>
+          </span>
+        </span>
+        <span id="w_122_1" class="ocr_word" title="bbox 1346 827 1437 866">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1471 828 1569 866" lang="grc">
@@ -643,11 +648,6 @@
         <span id="w_124" class="ocr_word" title="bbox 1601 842 1654 865" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_125" class="ocr_word" title="bbox 1680 827 1855 879" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀριθμῷ·</ins>
           </span>
         </span>
       </span>
@@ -714,9 +714,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 179 965 1858 1022">
-        <span id="w_138" class="ocr_word" title="bbox 179 984 223 1008" lang="grc">
+        <span id="w_138_0" class="ocr_word" title="bbox 179 984 223 1008">
           <span class="alternatives">
-            <ins title="nlp 2.00">τᾷ</ins>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
+          </span>
+        </span>
+        <span id="w_138_1" class="ocr_word" title="bbox 179 984 223 1008">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 273 968 450 1022" lang="grc">
@@ -767,11 +772,6 @@
         <span id="w_148" class="ocr_word" title="bbox 1550 965 1612 1005" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1645 979 1858 1018" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιστήμης</ins>
           </span>
         </span>
       </span>
@@ -915,29 +915,39 @@
             <ins class="alt" title="nlp 2.00">15</ins>
           </span>
         </span>
-        <span id="w_176_1" class="ocr_word" title="bbox 116 1190 152 1220">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δεσμος·</ins>
-          </span>
-        </span>
         <span id="w_177" class="ocr_word" title="bbox 371 1192 418 1216" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_178" class="ocr_word" title="bbox 450 1191 565 1216" lang="grc">
+        <span id="w_178_0" class="ocr_word" title="bbox 450 1191 565 1216">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατὰ</ins>
+            <ins class="alt" title="nlp 2.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 849 1191 922 1215" lang="grc">
+        <span id="w_178_1" class="ocr_word" title="bbox 450 1191 565 1216">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαφερόντων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_180" class="ocr_word" title="bbox 1296 1173 1371 1213" lang="grc">
+        <span id="w_179_0" class="ocr_word" title="bbox 849 1191 922 1215">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">πλειόνων</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 849 1191 922 1215">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_180_0" class="ocr_word" title="bbox 1296 1173 1371 1213">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">διαφερόντων</ins>
+          </span>
+        </span>
+        <span id="w_180_1" class="ocr_word" title="bbox 1296 1173 1371 1213">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 1403 1175 1462 1212" lang="grc">
@@ -950,26 +960,21 @@
             <ins class="alt" title="nlp 1.00">εἴδει,</ins>
           </span>
         </span>
-        <span id="w_183_0" class="ocr_word" title="bbox 1663 1186 1765 1212">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ὥστε</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 183 1245 779 1300">
-        <span id="w_184" class="ocr_word" title="bbox 183 1259 487 1286" lang="grc">
+        <span id="w_184_0" class="ocr_word" title="bbox 183 1259 487 1286">
           <span class="alternatives">
-            <ins title="nlp 2.00">αυνυπαχούεται</ins>
+            <ins class="alt" title="nlp 2.00">συνυπακούεται</ins>
+          </span>
+        </span>
+        <span id="w_184_1" class="ocr_word" title="bbox 183 1259 487 1286">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 519 1261 574 1300" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_186" class="ocr_word" title="bbox 608 1245 779 1298" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀριθμῷ.</ins>
           </span>
         </span>
       </span>
@@ -1113,9 +1118,14 @@
             <ins class="alt" title="nlp 1.00">ἐρωτώντων</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 905 1447 1033 1492" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 905 1447 1033 1492">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ ποῖόν</ins>
+            <ins class="alt" title="nlp 2.00">῾ποῖόν</ins>
+          </span>
+        </span>
+        <span id="w_214_1" class="ocr_word" title="bbox 905 1447 1033 1492">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1065 1467 1099 1490" lang="grc">
@@ -1141,11 +1151,6 @@
         <span id="w_219" class="ocr_word" title="bbox 1657 1462 1713 1491" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τις</ins>
-          </span>
-        </span>
-        <span id="w_220" class="ocr_word" title="bbox 1743 1446 1864 1500" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγων</ins>
           </span>
         </span>
       </span>
@@ -2052,9 +2057,14 @@
             <del title="nlp 0.90">ex</del>
           </span>
         </span>
-        <span id="w_394_0" class="ocr_word" title="bbox 306 2842 401 2867">
+        <span id="w_394_0_0" class="ocr_word" title="bbox 306 2842 401 2867">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἕχτος</ins>
+            <ins class="alt" title="nlp 2.00">ἕκτος</ins>
+          </span>
+        </span>
+        <span id="w_394_0_1" class="ocr_word" title="bbox 306 2842 401 2867">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_394_1" class="ocr_word" title="bbox 306 2842 401 2867">
@@ -2097,8 +2107,7 @@
         </span>
         <span id="w_401" class="ocr_word" title="bbox 1146 2822 1179 2856">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1202 2822 1282 2856">
@@ -2137,12 +2146,6 @@
         <span id="w_407" class="ocr_word" title="bbox 1816 2815 1850 2848">
           <span class="alternatives">
             <ins title="nlp 2.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_408" class="ocr_word" title="bbox 1869 2814 1896 2847">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
@@ -2453,15 +2456,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 3097 1943 3165">
-        <span id="w_467" class="ocr_word" title="bbox 129 3132 161 3164">
+        <span id="w_467_0" class="ocr_word" title="bbox 129 3132 161 3164">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.10a11</ins>
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
-        <span id="w_468" class="ocr_word" title="bbox 184 3097 295 3154">
+        <span id="w_467_1" class="ocr_word" title="bbox 129 3132 161 3164">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’ll</ins>
-            <del title="nlp 0.90">’ll</del>
+            <ins class="alt" title="nlp 2.00">10a11</ins>
           </span>
         </span>
         <span id="w_469" class="ocr_word" title="bbox 515 3120 559 3153">
@@ -2493,8 +2495,7 @@
         </span>
         <span id="w_474" class="ocr_word" title="bbox 1104 3115 1131 3145">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_475" class="ocr_word" title="bbox 1299 3113 1338 3146">
@@ -2526,8 +2527,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1838 3105 1943 3138">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">KTY:</ins>
-            <del title="nlp 0.90">KTY:</del>
+            <ins title="nlp 2.00">KTV:</ins>
           </span>
         </span>
       </span>
