--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0552.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0552.html
@@ -372,11 +372,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_70" class="ocr_word" title="bbox 1256 921 1276 962" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
         <span id="w_71" class="ocr_word" title="bbox 1308 920 1462 963" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὁ κοινός τε καὶ</ins>
@@ -796,9 +791,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1149 1837 1404 1894">
-        <span id="w_150" class="ocr_word" title="bbox 1149 1838 1324 1894" lang="grc">
+        <span id="w_150_0" class="ocr_word" title="bbox 1149 1838 1324 1894">
           <span class="alternatives">
-            <ins title="nlp 2.00">Π ρᾶξις λ'.</ins>
+            <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_150_1" class="ocr_word" title="bbox 1149 1838 1324 1894">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λ΄.</ins>
           </span>
         </span>
       </span>
@@ -1108,16 +1108,21 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 2034 2326 2113 2351" lang="grc">
+        <span id="w_210_0" class="ocr_word" title="bbox 2034 2326 2113 2351">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπιεἴθει</ins>
+            <ins class="alt" title="nlp 2.00">ἐπι-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 361 2461 2185 2510">
-        <span id="w_211" class="ocr_word" title="bbox 361 2467 374 2499">
+        <span id="w_211_0" class="ocr_word" title="bbox 361 2467 374 2499">
           <span class="alternatives">
-            <ins title="nlp 2.00">1</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 361 2467 374 2499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἴδει</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 511 2477 569 2499" lang="grc">
@@ -1132,8 +1137,7 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 685 2463 806 2498">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coiloc.</ins>
-            <del title="nlp 0.90">coiloc.</del>
+            <ins title="nlp 2.00">colloc.</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 833 2465 864 2497" lang="grc">
@@ -1487,8 +1491,7 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1751 2696 1794 2729">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y:</ins>
-            <del title="nlp 0.90">Y:</del>
+            <ins title="nlp 2.00">V:</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1821 2696 1933 2730" lang="grc">
@@ -1792,9 +1795,14 @@
             <ins class="alt" title="nlp 1.00">πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_336" class="ocr_word" title="bbox 1215 2931 1270 2967" lang="grc">
+        <span id="w_336_0" class="ocr_word" title="bbox 1215 2931 1270 2967">
           <span class="alternatives">
-            <ins title="nlp 2.00">χθ'</ins>
+            <ins class="alt" title="nlp 2.00">κθ΄</ins>
+          </span>
+        </span>
+        <span id="w_336_1" class="ocr_word" title="bbox 1215 2931 1270 2967">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1298 2933 1374 2966">
@@ -1835,11 +1843,6 @@
         <span id="w_343" class="ocr_word" title="bbox 2062 2932 2101 2964">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">17</ins>
-          </span>
-        </span>
-        <span id="w_344" class="ocr_word" title="bbox 2130 2944 2187 2965" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καί</ins>
           </span>
         </span>
       </span>
