--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0553.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0553.html
@@ -1514,19 +1514,19 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1177 1871 1457 1925">
+        <span id="w_291_0" class="ocr_word" title="bbox 1177 1871 1457 1925">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηχυῖαι</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκυῖαι</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 1177 1871 1457 1925">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1487 1872 1765 1924" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαχωρίζουσι</ins>
-          </span>
-        </span>
-        <span id="w_293" class="ocr_word" title="bbox 1801 1885 1848 1909" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
       </span>
@@ -2070,9 +2070,9 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 1617 2547 1721 2581" lang="grc">
+        <span id="w_398_0" class="ocr_word" title="bbox 1617 2547 1721 2581">
           <span class="alternatives">
-            <ins title="nlp 2.00">γὰρ—διαιρετιχαί</ins>
+            <ins class="alt" title="nlp 2.00">γὰρ—διαιρετικαί</ins>
           </span>
         </span>
       </span>
