--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0505.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0505.html
@@ -110,14 +110,14 @@
             <ins class="alt" title="nlp 1.00">Πλάτωνος</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 1381 399 1654 452" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 1381 399 1654 452">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρεσβεύοντεσ</ins>
+            <ins class="alt" title="nlp 2.00">πρεσβεύοντες</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1685 412 1856 450" lang="grc">
+        <span id="w_17_1" class="ocr_word" title="bbox 1381 399 1654 452">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δόγματα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -127,9 +127,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 275 468 586 523" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 275 468 586 523">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ Αριστοτελιχῆς</ins>
+            <ins class="alt" title="nlp 2.00">Ἀριστοτελικῆς</ins>
+          </span>
+        </span>
+        <span id="w_20_1" class="ocr_word" title="bbox 275 468 586 523">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 623 482 845 521" lang="grc">
@@ -155,11 +160,6 @@
         <span id="w_25" class="ocr_word" title="bbox 1691 481 1762 519" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_26" class="ocr_word" title="bbox 1801 481 1858 505" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
       </span>
@@ -199,9 +199,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1145 533 1416 590" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1145 533 1416 590">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ Απιστοτέλης</ins>
+            <ins class="alt" title="nlp 2.00">Ἀριστοτέλης</ins>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 1145 533 1416 590">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1436 548 1595 588" lang="grc">
@@ -212,11 +217,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1628 549 1696 588" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1727 547 1857 574" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐσίαν</ins>
           </span>
         </span>
       </span>
@@ -397,16 +397,11 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1771 754 1860 778" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπο-</ins>
+            <ins title="nlp 2.00">ὑποκείμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 180 808 1858 866">
-        <span id="w_73" class="ocr_word" title="bbox 180 812 353 865" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κείμενον</ins>
-          </span>
-        </span>
         <span id="w_74" class="ocr_word" title="bbox 386 826 572 866" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπάρχει·</ins>
@@ -561,19 +556,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1348 946 1597 998" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 1348 946 1597 998">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποχείμενον</ins>
+            <ins class="alt" title="nlp 2.00">ὑποκείμενον</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 1348 946 1597 998">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1630 947 1777 1000" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λαβεῖν·</ins>
-          </span>
-        </span>
-        <span id="w_106" class="ocr_word" title="bbox 1816 959 1859 983" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -697,7 +692,7 @@
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1812 1079 1858 1134" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰὴ</ins>
+            <ins title="nlp 2.00">῾ἡ</ins>
           </span>
         </span>
       </span>
@@ -1020,9 +1015,9 @@
             <ins class="alt" title="nlp 1.00">ἔμψυχον,</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1860 1423 1864 1475">
+        <span id="w_193_0" class="ocr_word" title="bbox 1860 1423 1864 1475">
           <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -1082,9 +1077,9 @@
             <ins class="alt" title="nlp 1.00">σώματος</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1842 1497 1924 1533">
+        <span id="w_205_0" class="ocr_word" title="bbox 1842 1497 1924 1533">
           <span class="alternatives">
-            <ins title="nlp 2.00">189ν</ins>
+            <ins class="alt" title="nlp 2.00">189v</ins>
           </span>
         </span>
       </span>
@@ -1205,7 +1200,7 @@
       <span class="ocr_line" title="bbox 183 1699 1863 1764">
         <span id="w_228" class="ocr_word" title="bbox 183 1724 254 1764" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">·γὰρ</ins>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 286 1708 488 1761" lang="grc">
@@ -1374,9 +1369,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 839 1911 1131 1965" lang="grc">
+        <span id="w_261_0" class="ocr_word" title="bbox 839 1911 1131 1965">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ Αριστοτέλους</ins>
+            <ins class="alt" title="nlp 2.00">Ἀριστοτέλους</ins>
+          </span>
+        </span>
+        <span id="w_261_1" class="ocr_word" title="bbox 839 1911 1131 1965">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1177 1924 1212 1948" lang="grc">
@@ -1387,11 +1387,6 @@
         <span id="w_263_0" class="ocr_word" title="bbox 1245 1907 1486 1948">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Πλατωνιχοὶ</ins>
-          </span>
-        </span>
-        <span id="w_263_1" class="ocr_word" title="bbox 1245 1907 1486 1948">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαταποντίσαντεσ</ins>
           </span>
         </span>
       </span>
@@ -1745,12 +1740,7 @@
         </span>
         <span id="w_331_0" class="ocr_word" title="bbox 377 2481 440 2514">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Κ1</ins>
-          </span>
-        </span>
-        <span id="w_331_1" class="ocr_word" title="bbox 377 2481 440 2514">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Κ1:</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 469 2479 583 2525" lang="grc">
@@ -1765,12 +1755,7 @@
         </span>
         <span id="w_334_0" class="ocr_word" title="bbox 684 2478 776 2512">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Κ2V</ins>
-          </span>
-        </span>
-        <span id="w_334_1" class="ocr_word" title="bbox 684 2478 776 2512">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Κ2V:</ins>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 803 2487 868 2510">
@@ -1874,12 +1859,7 @@
         </span>
         <span id="w_353_0" class="ocr_word" title="bbox 1512 2528 1572 2564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">35</ins>
-          </span>
-        </span>
-        <span id="w_353_1" class="ocr_word" title="bbox 1512 2528 1572 2564">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">35:</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1601 2533 1693 2562" lang="grc">
@@ -1962,12 +1942,7 @@
         </span>
         <span id="w_368_0" class="ocr_word" title="bbox 1862 2587 1937 2620">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">KV</ins>
-          </span>
-        </span>
-        <span id="w_368_1" class="ocr_word" title="bbox 1862 2587 1937 2620">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">KV:</ins>
           </span>
         </span>
       </span>
@@ -2354,9 +2329,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_440" class="ocr_word" title="bbox 870 2890 934 2930">
+        <span id="w_440_0" class="ocr_word" title="bbox 870 2890 934 2930">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_440_1" class="ocr_word" title="bbox 870 2890 934 2930">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_441" class="ocr_word" title="bbox 960 2898 1058 2931" lang="grc">
@@ -2389,12 +2369,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_447" class="ocr_word" title="bbox 1724 2880 1751 2911">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2539,9 +2513,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 3056 1939 3109">
-        <span id="w_474" class="ocr_word" title="bbox 118 3071 168 3109" lang="grc">
+        <span id="w_474_0" class="ocr_word" title="bbox 118 3071 168 3109">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐχ)</ins>
+            <ins class="alt" title="nlp 2.00">ἐκ)</ins>
+          </span>
+        </span>
+        <span id="w_474_1" class="ocr_word" title="bbox 118 3071 168 3109">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_475" class="ocr_word" title="bbox 200 3081 263 3102">
@@ -2605,11 +2584,6 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_486" class="ocr_word" title="bbox 1797 3056 1939 3100" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βάδισμα</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 117 3114 1893 3171">
         <span id="w_487" class="ocr_word" title="bbox 117 3127 302 3171" lang="grc">
@@ -2633,9 +2607,14 @@
             <ins class="alt" title="nlp 1.00">27</ins>
           </span>
         </span>
-        <span id="w_491" class="ocr_word" title="bbox 744 3122 809 3158">
+        <span id="w_491_0" class="ocr_word" title="bbox 744 3122 809 3158">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶθ᾿</ins>
+            <ins class="alt" title="nlp 2.00">εἶθ᾿</ins>
+          </span>
+        </span>
+        <span id="w_491_1" class="ocr_word" title="bbox 744 3122 809 3158">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_492" class="ocr_word" title="bbox 839 3135 904 3157">
@@ -2687,12 +2666,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">non</ins>
             <del title="nlp 0.90">non</del>
-          </span>
-        </span>
-        <span id="w_501" class="ocr_word" title="bbox 1703 3114 1893 3154">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adnotabo)</ins>
-            <del title="nlp 0.90">adnotabo</del>
           </span>
         </span>
       </span>
@@ -2751,7 +2724,7 @@
         </span>
         <span id="w_512" class="ocr_word" title="bbox 1323 3182 1430 3221" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(διαιρ.</ins>
+            <ins title="nlp 2.00">διαιρ.</ins>
           </span>
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1458 3174 1540 3218">
